# dx-learn

./: .gitignore  LICENSE  LICENSE.md  README.md  manual.md  pyproject.toml
.github/workflows/: ci.yml
dxlearn/: __init__.py  cli.py  config.py  dxclassifier.py
dxlearn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dxlearn/api/: main.py
dxlearn/automl/: runner.py
dxlearn/base/: __init__.py  estimator.py  evolutionary_base.py  search_base.py
dxlearn/core/: model_registery.py  scoring.py
dxlearn/dashboard/: __init__.py  api.py  event_store.py  schemas.py
dxlearn/dashboard/plugins/: base.py
dxlearn/dashboard/static/: .gitkeep
dxlearn/encoding/: grammar.py  node.py  tree.py
dxlearn/engine/: __init__.py  genetic_search.py
dxlearn/evaluation/: __init__.py  evaluator.py  objectives.py  scalarizer.py
dxlearn/explain/: ensemble_fusion.py  pipeline_attribution.py  shap_runner.py
dxlearn/metrics/: interpretability.py  performance.py
dxlearn/operators/: __init__.py  crossover.py  mutation.py  selection.py
dxlearn/search_space/: __init__.py  classifiers.py  registry.py  scalers.py
dxlearn/tests/: test_scoring.py
dxlearn/validation/: __init__.py  pipeline_validator.py
tests/: TEST_REPORT.md  reproducibility_worker.py  test_api_contract.py  test_caching.py  test_dashboard.py  test_edge_cases.py  testv1.py  testv2.py
